samples/_failures_safe/1761242926_e01773_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74432623.c: In function ‘main’:
./samples/SAFE/__tmp_74432623.c:187:12: error: missing terminating " character
  187 |     printf("Words: %d
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_74432623.c:187:5: error: expected expression at end of input
  187 |     printf("Words: %d
      |     ^~~~~~
./samples/SAFE/__tmp_74432623.c:187:5: error: expected declaration or statement at end of input
